--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,21 @@ Primary Color (light  grey): #AAAAAA;
 Secondary Color (blue): #4A02E7;
 */
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 body {
   background-color: #ffffff;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px; /* Sets the font size to 16px */
   font-weight: 300; /* Sets the font weight to 300 */
   line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
   color: #4a4a4a;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   line-height: 1.4;
 }
 h1 {
@@ -46,28 +49,30 @@ a {
   text-decoration: none; /* No underlining */
 }
 a:hover {
-  color: #4A02E7;
+  color: #4a02e7;
   text-decoration: underline; /* Underlining when hovering over a link */
 }
-a:visited { /* visited link */
+a:visited {
+  /* visited link */
   color: #000000;
 }
-a:active { /* selected link */
+a:active {
+  /* selected link */
   color: #000000;
 }
 a:hover,
 a:focus {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: underline;
 }
 .button {
   display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
-  background-color: #4A02E7;
+  background-color: #4a02e7;
   color: #ffffff; /* needed to override the default link color */
   font-weight: 400;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #4A02E7; /* width of the border, type, color */
+  border-bottom: 2px solid #4a02e7; /* width of the border, type, color */
   transition: 0.2s opacity;
 }
 .button:hover {
@@ -75,10 +80,10 @@ a:focus {
   text-decoration: none;
 }
 .button.contact {
-  background-color: #4A02E7;
-  color: #fffff;
+  background-color: #4a02e7;
+  color: #ffffff;
   text-transform: uppercase;
-  border: 2px solid #4A02E7;
+  border: 2px solid #4a02e7;
 }
 
 .button.contact:hover {
@@ -86,13 +91,17 @@ a:focus {
   text-decoration: none;
 }
 .button.download {
-  background-color: #4A02E7;
-  color: #fffff;
+  background-color: #4a02e7;
+  color: #ffffff;
   text-transform: uppercase;
-  border: 2px solid #4A02E7;
+  border: 2px solid #4a02e7;
 }
 
 .button.contact:hover {
   opacity: 0.8; /* Reduces the opacity of the button to 80% */
   text-decoration: none;
+}
+
+.logo {
+  max-width: 200px;
 }
