--- a/css/style.css
+++ b/css/style.css
@@ -105,3 +105,27 @@ a:focus {
 .logo {
   max-width: 200px;
 }
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  padding-left: 0;
+}
+
+nav ul li {
+  padding: 0 5px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 600px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
