--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ nav > ul > li > a {
   padding: 0 15px;
   text-transform: uppercase;
   font-weight: 700;
-    text-align: center;
+text-align: center;
   color: #4a4a4a;
 }
 #hero {
@@ -148,7 +148,52 @@ nav > ul > li > a {
   padding: 20px 0;
   display: inline-block;
   width: 100%;
+  text-align: center;
+  }
+
+  #hero
+  span {
+  display: block;
 }
+
 main {
-  padding-top: 50px;
+  padding-top: 100px;
+}
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+  header {
+  text-align: unset;
+  padding: 20px 0 13px;
+}
+
+nav {
+  width: auto;
+  float: right;
+  margin-top: 4px;
+}
+.col-md-6 {
+  width: 50%;
+}
+[class*="col-"] {
+  float: left;
+  padding : 10px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+#about-page h3 { margin-top: 0;}
+}
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+}
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
 }
