--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ a {
 
 a:hover,
 a:focus {
-  color: #4a02e7;
+  color: #ffffff;
   text-decoration: underline;
 }
 
@@ -83,13 +83,17 @@ a:active {
 /* general buttons */
 .button {
   display: inline-block;
-  background-color: #4a02e7;
-  color: #ffffff;
+  background-color: #4A02E7;
+  color: white;
   font-weight: 400;
+  text-decoration: none;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #4a02e7;
-  transition: 0.2s opacity;
+  border-bottom: 2px solid #994c30;
+transition: 0.2s opacity;
+}
+.button:hover {
+  opacity: 0.8;
 }
 
 .button:hover {
@@ -118,6 +122,7 @@ header {
   -webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
   -moz-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
   box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
+width: 100%;
 }
 
 /* Layout styling */
@@ -135,7 +140,9 @@ header {
 }
 nav > ul {
   list-style-type: none;
+    width: 100%;
   padding: 0px;
+
 }
 nav > ul > li {
   display: inline-block;
@@ -160,7 +167,7 @@ nav > ul > li > a {
 }
 
 main {
-  padding-top: 100px;
+  padding-top: 99px;
 }
 
 .social-links {
@@ -188,6 +195,8 @@ Medium devices (640px and larger)
     float: right;
     margin-top: 4px;
   }
+}
+
   .col-md-6 {
     width: 50%;
   }
@@ -196,15 +205,15 @@ Medium devices (640px and larger)
     padding: 10px;
     box-sizing: border-box;
   }
+
   .row::after {
     content: "";
     clear: both;
     display: table;
   }
-  #about-page h3 {
+  #about-page h2 {
     margin-top: 0;
   }
-}
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
@@ -214,6 +223,11 @@ Large devices (1024px or larger)
 X-large devices (1440px or larger)
 ================================= */
 @media only screen and (min-width: 1440px) {
+  .container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
 }
 
 .logo {
@@ -242,4 +256,39 @@ header {
     flex-direction: column;
     align-items: center;
   }
+}
+berlin-illustration{width: 100%;
+max-width: 100%;
+height: auto;}
+
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+.sun {
+  animation-duration: 4s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+.cloud-front {
+  animation-duration: 30s;
+  animation-name: cloud-move;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
 }
