--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,10 @@ h1,
 h2,
 h3,
 h4 {
+  font-family: "Lato", sans-serif;
   line-height: 1.4;
 }
+
 h1 {
   font-size: 2.75em;
   font-weight: 700;
@@ -40,16 +42,11 @@ h4 {
   font-weight: 400;
 }
 
-code {
-  background-color: black;
-  color: #b4d455;
-  padding: 5px;
-}
-
 /* custom logo sizing */
-#logo {
-  width: 50px;
+.logo {
+  max-width: 150px;
   height: auto;
+
 }
 
 /* general image responsive sizing */
@@ -59,20 +56,23 @@ img {
 
 /* Links */
 a {
+  background-color: inherit;
   color: #333333;
   text-decoration: none; /* No underlining */
 }
 
 a:hover,
 a:focus {
-  color: #ffffff;
-  text-decoration: underline;
+  background-color: inherit;
+  color: #4A02E7;
+  text-decoration: non;
 }
 
 a:visited {
   /* visited link */
   /* color: #ff7f50; */
   /* We suggest using a different color here */
+background-color: inherit;
   color: gray;
 }
 a:active {
@@ -85,15 +85,12 @@ a:active {
   display: inline-block;
   background-color: #4A02E7;
   color: white;
-  font-weight: 400;
+  font-weight: 700;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid #994c30;
 transition: 0.2s opacity;
-}
-.button:hover {
-  opacity: 0.8;
 }
 
 .button:hover {
@@ -113,17 +110,10 @@ transition: 0.2s opacity;
   color: #ffffff;
 }
 
-header {
-  background-color: #ffffff;
-  padding: 10px 0;
-  margin: 0px;
-  text-align: center;
-  border-bottom: 3px solid #4a4a4a;
-  -webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
-  -moz-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
-  box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
-width: 100%;
+svg {
+    max-width: 32px;
 }
+
 
 /* Layout styling */
 .container {
@@ -135,41 +125,141 @@ width: 100%;
 .center {
   text-align: center;
 }
-.logo {
-  max-width: 50px;
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
 }
-nav > ul {
-  list-style-type: none;
-    width: 100%;
-  padding: 0px;
 
+[class*="col-"] {
+    float: left;
+    padding: 10px;
 }
-nav > ul > li {
-  display: inline-block;
-}
-nav > ul > li > a {
-  padding: 0 15px;
-  text-transform: uppercase;
-  font-weight: 700;
-  text-align: center;
-  color: #4a4a4a;
-}
-#hero {
-  background-color: #ffffff;
-  padding: 20px 0;
-  display: inline-block;
-  width: 100%;
-  text-align: center;
+#hero h1 {
+    text-align: center;
+    margin: 0;
+    padding: 0.67em 0;
 }
 
 #hero span {
-  display: block;
+    display: block;
+}
+
+#work h2 {
+    text-align: center;
+}
+
+.logo {
+    max-width: 65px;
+}
+header {
+  background-color: #ffffff;
+  padding: 10px 0;
+  margin: 0px;
+  border-bottom: 3px solid #4a4a4a;
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
+  -moz-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
+  box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.38);
+  position: fixed;
+width: 100%;
+}
+
+
+/* Removes the bullet points from unordered lists at nav bar */
+
+nav > ul {
+  list-style-type: none;
+  padding-left: 0px;
+  margin: 0;
+  text-decoration: none;
+
+}
+
+nav > ul > li > a {
+  list-style-type: none;
+  padding: 0 15px;
+  font-family: "Lato", sans-serif;
+  color: #000000;
+  font-size: 1.125em;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  text-decoration: none;
+}
+/* --------Pseudo classes hover states at navigation links */
+nav>ul>li>a:visited {
+  text-decoration: underline;
+}
+
+nav>ul>li>a:hover {
+  color: #000000;
+  /* Underlining when hovering over a link */
+  font-style: italic;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+nav>ul>li>a:active {
+  font-style: italic;
+  padding: 0.1em 0.2em;
+  text-decoration: underline;
+}
+
+.navtoggle li:not(:last-child) {
+    display: none;
+    padding: 0 0 10px;
+}
+
+.navtoggle,
+.navtoggle.responsive {
+    position: relative;
+}
+
+.navtoggle.responsive nav {
+    padding: 24px 0 0;
+}
+
+.navtoggle li .icon {
+    position: absolute;
+    right: 0;
+    top: 2px;
+    font-size: 30px;
+    padding-right: 0.3em;
+}
+
+.navtoggle.responsive li {
+    display: block;
+    padding: 10px 0;
+    border-top: 1px solid #54e9d1;
+}
+
+
+#hero {
+  background-color: #ffffff;
+  padding: 20px 0;
+  text-align: center;
 }
 
 main {
   padding-top: 99px;
 }
 
+#contact {
+    background-color: #ffffff;
+    text-align: center;
+    padding: 0.67em;
+}
+
+#copyright {
+    text-align: center;
+    font-size: 12px;
+}
+
+#about-picture {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
 .social-links {
   list-style: none;
 }
@@ -180,82 +270,6 @@ main {
 .social-links img {
   width: 30px;
   height: auto;
-}
-/* ==============================
-Medium devices (640px and larger)
-================================= */
-@media only screen and (min-width: 640px) {
-  header {
-    text-align: unset;
-    padding: 20px 0 13px;
-  }
-
-  nav {
-    width: auto;
-    float: right;
-    margin-top: 4px;
-  }
-}
-
-  .col-md-6 {
-    width: 50%;
-  }
-  [class*="col-"] {
-    float: left;
-    padding: 10px;
-    box-sizing: border-box;
-  }
-
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  #about-page h2 {
-    margin-top: 0;
-  }
-/* ==============================
-Large devices (1024px or larger)
-================================= */
-@media only screen and (min-width: 1024px) {
-}
-/* ==============================
-X-large devices (1440px or larger)
-================================= */
-@media only screen and (min-width: 1440px) {
-  .container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-.logo {
-  max-width: 200px;
-}
-
-nav ul {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-  padding-left: 0;
-}
-
-nav ul li {
-  padding: 0 5px;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-@media only screen and (max-width: 600px) {
-  header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
 }
 berlin-illustration{width: 100%;
 max-width: 100%;
@@ -292,3 +306,86 @@ height: auto;}
 .cloud-back {
   animation: 34s cloud-move-reverse infinite alternate linear;
 }
+
+/* ==============================
+Medium devices (641px and larger)
+================================= */
+@media only screen and (min-width: 641px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 4px;
+  }
+  nav > ul {
+          margin: 1em 0;
+      }
+
+      nav > ul > li {
+          display: inline-block;
+
+
+  }
+  [class*="col-"] {
+    float: left;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  nav > ul {
+        margin: 1em 0;
+  nav > ul > li {
+  display: inline-block;
+}
+.navtoggle li:not(:last-child) {
+    display: inline-block;
+}
+.navtoggle li:not:last-child {
+  display: none;
+}
+
+.col-md-6 {
+  width: 50%;
+
+#about-page h2 {
+  margin-top: 0;
+}
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+.container{
+max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.col-md-7 {
+       width: 60%;
+   }
+
+   .col-md-5 {
+       width: 40%;
+   }
+}
+/* Removes menu icon and lists navigation items for larger than 640px*/
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  /* Removes menu icon for screens larger than 640px */
+  .navtoggle li:last-child {
+    display: none;
+  }
+
+  nav>ul {
+    margin: 1em 0;
+  }
