--- a/css/style.css
+++ b/css/style.css
@@ -325,11 +325,14 @@ Medium devices (641px and larger)
           margin: 1em 0;
       }
 
-      nav > ul > li {
-          display: inline-block;
-
-
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
   }
+
+  .navtoggle li:last-child {
+    display: none;
+  }
+
   [class*="col-"] {
     float: left;
     padding: 10px;
